changed to longer header text

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 TRAIN SCHEDULES Find your train schedule!!!
+  h1 STU-Train SCHEDULES Find your train schedule!!! and Have a Nice Ride!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
